feat: i don’t know
[Intro]
お前はもう死んでいる
なに!?
Я не знаю
Я не знаю
Я не знаю
Я не знаю
Нет
Aye
Oh-woah

[Chorus]
Is it real, is it fake, or is it all a dream?
Why do people be so evil, aim it all at me
I don't know (I don’t know)
I don't know (I don't know)
I don’t know (I don't know)
I don't know (I don't know)
Wanna kill myself, I wonder if it hurts
Maybe take some cyanide, I wonder if it works (I wonder if it works)
I don't know (I don't know)
I don't know (I don't know)
I don’t know (I don’t know)
I don't know (I don’t know)
I was stable for a minute, now I'm back on drugs (back on drugs)
Girl told me to come over, help me sober up (sober up)
But I don't know (I don't know)
I don’t know (I don't know)
I don't know (I don't know)
I don't know (I don't know)
Since I blew up everybody wanna hit my phone (Hit my phone)
But I rather stay at home and think of life alone
I don't know (I don't know)
I don't know (I don't know)
I don't know (I don't know)
I don't know (I don't know)
See upcoming rap shows
Get tickets for your favorite artists
You might also like
i fucked up
convolk
Chased Away
convolk
​soldier freestyle
convolk
[Verse]
I'm so torn when I think of my future
Don't let her stay, I just paid for her Uber
MF DOOM called me and told me "I'm super"
Take some more Klonopin, die in a stupor, shit
If you hatin' on me then I know that you a dumb bitch (That you a dumb bitch)
Labels watchin' me like I be doin' front flips (Doin' front flips)
If she talking shit to me then I know that we done, RIP (That we done, RIP)
Making moves and see that you ain't even done shit (You ain't even done shit)
I was cruising through my city gettin' recognized by everyone
Everybody hated me, but now they wanna see me stunt
Back in middle school I had to fight and I got hurt a lot
That was all so easy, way before I had to carry guns
I was sober 'til I popped another Klon
Thanks for the memories but now they're fuckin' gone (N-n-now they're fuckin' gone)
My heart beatin' faster than a marat
