# internal/app/app.go
@@ -2,19 +2,24 @@ package app
 
 import (
 	"context"
+	"crypto/ecdsa"
 	"errors"
 	"fmt"
-	"hackathon-back/internal/model"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"github.com/jackc/pgx/v5/pgxpool"
 	"go.uber.org/zap"
 
 	"hackathon-back/internal/api/http/handler"
 	"hackathon-back/internal/api/http/route"
 	"hackathon-back/internal/apperrors"
 	"hackathon-back/internal/config"
+	"hackathon-back/internal/model"
 	"hackathon-back/internal/repository"
 	"hackathon-back/internal/service"
+	"hackathon-back/pkg/jwt"
+	"hackathon-back/pkg/mailer"
 	"hackathon-back/pkg/postgres"
 	"hackathon-back/pkg/redis"
 	"hackathon-back/pkg/server"
@@ -35,26 +40,68 @@ type HealthHandler interface {
 	Health(c *gin.Context)
 }
 
+type AuthRepository interface {
+	Pool() *pgxpool.Pool
+
+	InsertUser(ctx context.Context, ext repository.RepoExtension, user *model.User) (*model.User, error)
+	SelectUserByID(ctx context.Context, ext repository.RepoExtension, id uuid.UUID) (*model.User, error)
+	SelectUserByEmail(ctx context.Context, ext repository.RepoExtension, email string) (*model.User, error)
+	UpdateUserAsConfirmed(ctx context.Context, ext repository.RepoExtension, userID uuid.UUID) error
+	InsertVerificationToken(ctx context.Context, ext repository.RepoExtension, verificationToken *model.VerificationToken) error
+	SelectVerificationToken(ctx context.Context, ext repository.RepoExtension, token []byte) (*model.VerificationToken, error)
+	DeleteVerificationTokenByUserID(ctx context.Context, ext repository.RepoExtension, userID uuid.UUID) error
+}
+
+type AuthService interface {
+	Register(ctx context.Context, username, email, password string) (user *model.User, userToken []byte, err error)
+	ResendConfirmation(ctx context.Context, email string) ([]byte, error)
+	Confirmation(ctx context.Context, incCode string, incToken []byte) error
+	Login(ctx context.Context, email, password string) (accessToken, refreshToken string, err error)
+	Logout(ctx context.Context, refreshToken string) error
+	Refresh(ctx context.Context, refreshToken string) (newAccessToken, newRefreshToken string, err error)
+	TestLogin(ctx context.Context) (accessToken, refreshToken string, err error)
+}
+
+type AuthHandler interface {
+	Register(c *gin.Context)
+	ResendConfirmation(c *gin.Context)
+	Confirmation(c *gin.Context)
+	Login(c *gin.Context)
+	Logout(c *gin.Context)
+	Refresh(c *gin.Context)
+	TestLogin(c *gin.Context)
+}
+
 type App struct {
 	Cfg        *config.Config
 	Log        *zap.Logger
 	Handler    *Handler
 	Service    *Service
+	Security   *Security
 	DB         postgres.Postgres
 	RDB        redis.Redis
+	Mailer     mailer.Mailer
 	HTTPServer server.HTTPServer
 }
 
 type Repository struct {
 	HealthRepository HealthRepository
+	AuthRepository   AuthRepository
 }
 
 type Service struct {
 	HealthService HealthService
+	AuthService   AuthService
 }
 
 type Handler struct {
 	HealthHandler HealthHandler
+	AuthHandler   AuthHandler
+}
+
+type Security struct {
+	PrivateKey *ecdsa.PrivateKey
+	PublicKey  *ecdsa.PublicKey
 }
 
 func New(cfg *config.Config, log *zap.Logger) (*App, error) {
@@ -72,11 +119,20 @@ func New(cfg *config.Config, log *zap.Logger) (*App, error) {
 		return nil, fmt.Errorf("failed to initialize redis: %w", err)
 	}
 
+	sec, err := initSecurity(log, cfg.Key)
+	if err != nil {
+		log.Error("Failed to initialize security", zap.Error(err))
+
+		return nil, fmt.Errorf("failed to initialize security: %w", err)
+	}
+
+	mlr := initMailer(log, &cfg.Mailer)
+
 	repo := initRepository(log, db)
 
-	svc := initService(log, repo)
+	svc := initService(log, &cfg.JWT, sec, repo, mlr, rdb)
 
-	hdl := initHandler(log, svc)
+	hdl := initHandler(log, &cfg.JWT, svc)
 
 	httpServer := initHTTPServer(log, cfg, hdl)
 
@@ -183,23 +239,71 @@ func initRedis(cfg *config.Redis) (redis.Redis, error) {
 	return rdb, nil
 }
 
-func initHandler(log *zap.Logger, svc *Service) *Handler {
+func initMailer(log *zap.Logger, cfg *config.Mailer) mailer.Mailer {
+	mailerCfg := &mailer.Config{
+		Host:     cfg.Host,
+		Port:     cfg.Port,
+		Username: cfg.Username,
+		Password: cfg.Password,
+		From:     cfg.From,
+		UseTLS:   cfg.UseTLS,
+	}
+
+	mlr := mailer.New(mailerCfg)
+
+	log.Debug("Mailer initialized")
+
+	return mlr
+}
+
+func initSecurity(log *zap.Logger, cfg config.Key) (*Security, error) {
+	privateKey, err := jwt.LoadECDSAPrivateKey(cfg.PrivateKey)
+	if err != nil {
+		return nil, fmt.Errorf("failed to load private key: %w", err)
+	}
+
+	log.Debug("Private key loaded")
+
+	publicKey, err := jwt.LoadECDSAPublicKey(cfg.PublicKey)
+	if err != nil {
+		return nil, fmt.Errorf("failed to load public key: %w", err)
+	}
+
+	log.Debug("Public key loaded")
+
+	return &Security{
+		PrivateKey: privateKey,
+		PublicKey:  publicKey,
+	}, nil
+}
+
+func initHandler(log *zap.Logger, jwtCfg *config.JWT, svc *Service) *Handler {
 	healthHandler := handler.NewHealthHandler(log, svc.HealthService)
 
 	log.Debug("Health handler initialized")
 
+	authHandler := handler.NewAuthHandler(log, svc.AuthService, jwtCfg.AccessTokenTTL, jwtCfg.RefreshTokenTTL)
+
+	log.Debug("Auth handler initialized")
+
 	return &Handler{
 		HealthHandler: healthHandler,
+		AuthHandler:   authHandler,
 	}
 }
 
-func initService(log *zap.Logger, repo *Repository) *Service {
+func initService(log *zap.Logger, jwtCfg *config.JWT, sec *Security, repo *Repository, mlr mailer.Mailer, rdb redis.Redis) *Service {
 	healthSvc := service.NewHealthService(log, repo.HealthRepository)
 
 	log.Debug("Health service initialized")
 
+	authSvc := service.NewAuthService(log, sec.PublicKey, sec.PrivateKey, repo.AuthRepository, mlr, rdb, jwtCfg.AccessTokenTTL, jwtCfg.RefreshTokenTTL)
+
+	log.Debug("Auth service initialized")
+
 	return &Service{
 		HealthService: healthSvc,
+		AuthService:   authSvc,
 	}
 }
 
@@ -208,13 +312,23 @@ func initRepository(log *zap.Logger, db postgres.Postgres) *Repository {
 
 	log.Debug("Health repository initialized")
 
+	authRepo := repository.NewAuthRepository(db.Pool())
+
+	log.Debug("Auth repository initialized")
+
 	return &Repository{
 		HealthRepository: healthRepo,
+		AuthRepository:   authRepo,
 	}
 }
 
 func initHTTPServer(log *zap.Logger, cfg *config.Config, hdl *Handler) server.HTTPServer {
-	router := route.SetupRouter(log, cfg, hdl.HealthHandler)
+	router := route.SetupRouter(
+		log,
+		cfg,
+		hdl.HealthHandler,
+		hdl.AuthHandler,
+	)
 
 	httpServer := server.NewHTTPServer(
 		server.WithAddr(cfg.HTTPServer.Host, cfg.HTTPServer.Port),
